Bug: Fix date time parsing inconsistencies
The DateTimeParser had inconsistencies when displaying errors related to
parsing date and time inputs in the UI, as the ElloDialogBox is
immaturely clipped vertically.

Let's:
* Set max height for ElloDialogBox to ensure error messages are clipped
correctly

--- a/src/main/resources/css/dialog-box.css
+++ b/src/main/resources/css/dialog-box.css
@@ -4,6 +4,7 @@
     -fx-border-radius: 0.5em 0.5em 0 0.5em;
     -fx-background-color: ello-primary-yellow;
     -fx-text-fill: ello-black;
+    -fx-wrap-text:true;
 }
 
 .user-tail {
